[project]
name = "Confirmation Remover"
version = "1.0.0"
authors = [{ name = "yeti" }]
description = "Removes the 'Are you sure?' and other prompts from venders."

[tool.sdkmod]
name = "Confirmation Remover"
mod_type = "Standard" # or "Library"
supported_games = "BL1"
coop_support = "Unknown"
auto_enable = "False"
license = {name = "GPL3", url = "https://choosealicense.com/licenses/gpl-3.0/" }
