[project]
name = "Mission Selector"
version = "1.1.1"
authors = [{ name = "Miner Of Worlds" }]
description = "Adds keybinds to switch missions like in BL3."

[tool.sdkmod]
name = "Mission Selector"
mod_type = "Standard" # or "Library"
supported_games = "BL1"
coop_support = "Unknown"
auto_enable = "False"
download = "https://github.com/MOW531/MOW531-BL1-SDK-Mods/raw/refs/heads/main/Mission%20Selector/Mission%20Selector.zip"
license = {name = "GPL3", url = "https://choosealicense.com/licenses/gpl-3.0/" }
