[project]
name = "Cutscene Skip"
version = "1.0.1"
authors = [{ name = "Miner Of Worlds" }]
description = "Skips most cutscenes."

[tool.sdkmod]
name = "Cutscene Skip"
mod_type = "Standard" # or "Library"
supported_games = ["BL1"]
coop_support = "Unknown"
auto_enable = "False"
download = "https://github.com/MOW531/MOW531-BL1-SDK-Mods/raw/refs/heads/main/Cutscene%20skip/Cutscene%20skip.zip"
license = {name = "GPL3", url = "https://choosealicense.com/licenses/gpl-3.0/" }
