[project]
name = "FFYL Crawl"
version = "1.0.0"
authors = [{ name = "Miner Of Worlds" }]
description = "Lets you Crawl while in FFYL like in the later games."

[tool.sdkmod]
name = "FFYL Crawl"
mod_type = "Standard" # or "Library"
supported_games = ["BL1"]
coop_support = "Unknown"
auto_enable = "False"
download = "https://github.com/MOW531/MOW531-BL1-SDK-Mods/raw/refs/heads/main/FFYL%20Crawl/FFYL%20Crawl.zip"
license = {name = "GPL3", url = "https://choosealicense.com/licenses/gpl-3.0/" }
