[project]
name = "Grenade Launchers SDK"
version = "1.1.0"
authors = [{ name = "Miner Of Worlds" }]
description = "Add grenade launchers"

[tool.sdkmod]
name = "Grenade Launchers SDK"
mod_type = "Standard" # or "Library"
supported_games = ["BL1"]
coop_support = "Unknown"
auto_enable = "False"
download = "https://github.com/MOW531/MOW531-BL1-SDK-Mods/raw/refs/heads/main/Grenade%20Launchers%20SDK/Grenade%20Launchers%20SDK.zip"
license = {name = "GPL3", url = "https://choosealicense.com/licenses/gpl-3.0/" }
