[project]
name = "Map Tweaks"
version = "1.0.0"
authors = [{ name = "Miner Of Worlds" }]
description = "Restores some echos and makes some QoL changes."

[tool.sdkmod]
name = "Map Tweaks"
mod_type = "Standard" # or "Library"
supported_games = ["BL1"]
coop_support = "Unknown"
auto_enable = "False"
license = {name = "GPL3", url = "https://choosealicense.com/licenses/gpl-3.0/" }
