[project]
name = "FOV and sprint rotation fix"
version = "2.4.0"
authors = [{ name = "Miner Of Worlds" }]
description = "Adds separate sliders for world FOV and weapon-type FOVs, jumping while sprinting doesn't lower the FOV, fixes diagonal sprint canceling when you turn in the opposite direction, and adds an option to remove the Reload function from Use."

[tool.sdkmod]
name = "FOV and sprint rotation fix"
mod_type = "Standard" # or "Library"
supported_games = ["BL1"]
coop_support = "Unknown"
auto_enable = "False"
download = "https://github.com/MOW531/MOW531-BL1-SDK-Mods/raw/refs/heads/main/Permanent%20FOV%20and%20sprint%20rotation%20fix/FOV%20and%20sprint%20rotation%20fix.zip"
license = {name = "GPL3", url = "https://choosealicense.com/licenses/gpl-3.0/" }
