[project]
name = "Post-Process Effects"
version = "1.0.0"
authors = [{ name = "Miner Of Worlds" }]
description = "Lets you edit the settings of certain post-process effects."

[tool.sdkmod]
name = "Post-Process Effects"
mod_type = "Standard" # or "Library"
supported_games = "BL1"
coop_support = "Unknown"
auto_enable = "False"
license = {name = "GPL3", url = "https://choosealicense.com/licenses/gpl-3.0/" }
