[project]
name = "Quick Use Medkit"
version = "1.0.0"
authors = [{ name = "Miner Of Worlds" }]
description = "Adds a hotkey to use a medkit."

[tool.sdkmod]
name = "Quick Use Medkit"
mod_type = "Standard" # or "Library"
supported_games = "BL1"
coop_support = "Unknown"
auto_enable = "False"
license = {name = "GPL3", url = "https://choosealicense.com/licenses/gpl-3.0/" }
