[project]
name = "Extended Item Cards"
version = "1.2.1"
authors = [{ name = "Miner Of Worlds" }]
description = "Adds Recharge Delay and Reload Time to item cards."

[tool.sdkmod]
name = "Extended Item Cards"
mod_type = "Standard" # or "Library"
supported_games = ["BL1"]
coop_support = "Unknown"
auto_enable = "False"
download = "https://github.com/MOW531/MOW531-BL1-SDK-Mods/raw/refs/heads/main/Experimental%20mods/Extended%20Item%20Cards/Extended%20Item%20Cards.zip"
license = {name = "GPL3", url = "https://choosealicense.com/licenses/gpl-3.0/" }
