[project]
name = "Extended UI"
version = "1.3.2"
authors = [{ name = "Miner Of Worlds" }]
description = "Adds Recharge Delay and Reload Time/Speed to item cards, removes the 5-line limit on card descriptions, adds a story mission indiactor, and yellow health bars for armored enemies."

[tool.sdkmod]
name = "Extended UI"
mod_type = "Standard" # or "Library"
supported_games = ["BL1"]
coop_support = "Unknown"
auto_enable = "False"
download = "https://github.com/MOW531/MOW531-BL1-SDK-Mods/raw/refs/heads/main/Experimental%20mods/Extended%20Item%20Cards/Extended%20Item%20Cards.zip"
license = {name = "GPL3", url = "https://choosealicense.com/licenses/gpl-3.0/" }
